# AlphaDossier

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
apps/web/: .env.local.example  package-lock.json  package.json  tsconfig.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: audit-table.test.tsx  audit-table.tsx  citation-popover.test.tsx  citation-popover.tsx  error-banner.test.tsx  error-banner.tsx  loading.tsx  thesis-viewer.test.tsx  thesis-viewer.tsx
apps/web/lib/: api.ts  supabase.ts  types.ts
db/migrations/: 001_init.sql
prompts/: disclosure.md  earnings_reviewer.md  macro.md  market_research.md  news.md  synthesis.md  thesis_tracker.md  uk_macro.md  uk_rns.md  valuation.md
services/api/: audit.py  config.py  db.py  jobs.py  llm.py  main.py  orchestrator.py  schemas.py
services/api/agents/: _base.py  _format.py  _prompts.py  disclosure_agent.py  earnings_reviewer_agent.py  macro_agent.py  market_research_agent.py  news_agent.py  price_agent.py  quant_validation_agent.py  synthesizer.py  thesis_tracker_agent.py  uk_macro_agent.py  uk_rns_agent.py  valuation_agent.py
services/api/data/: _errors.py  _http.py  _types.py  company_ir.py  fred.py  identifiers.py  news_api.py  ons.py  prices.py  sec_edgar.py  uk_fca_nsm.py  uk_rns.py
services/api/ingest/: _types.py  chunker.py  citations.py  document_store.py  embedder.py  retriever.py
services/api/routers/: health.py  thesis.py
services/api/tests/: test_db.py  test_health.py  test_orchestrator.py  test_orchestrator_review_fixes.py  (+1 more)
(+36 files in other folders)
