[project]
name = "ai-quant"
version = "0.1.0"
description = "AI-quant: cited research dossiers for UK and US public-market investors."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "asyncpg>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
    "pgvector>=0.3",
    "pypdf>=5.0",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["services*"]
exclude = ["services.api.tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "node_modules", ".next"]

[tool.mypy]
python_version = "3.11"
files = ["services"]
ignore_missing_imports = false
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["asyncpg", "asyncpg.*", "pgvector", "pgvector.*", "pypdf", "pypdf.*", "bs4"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["services/api/tests"]
